Bug 486126 - Double Text when there is text with a Link and No Link Previews Is On
Summary: Double Text when there is text with a Link and No Link Previews Is On
Status: RESOLVED FIXED
Alias: None
Product: NeoChat
Classification: Applications
Component: General (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Tobias Fella
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-04-25 17:43 UTC by Timothy Arnold
Modified: 2024-04-28 10:51 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Displays Double comment (56.44 KB, image/png)
2024-04-25 17:43 UTC, Timothy Arnold
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Timothy Arnold 2024-04-25 17:43:15 UTC
Created attachment 168904 [details]
Displays Double comment

SUMMARY

When Link Previews are off, you see double text for comments/posts that have a URL in them. Separately, it was stated that individual room link preview settings are broken. 

STEPS TO REPRODUCE
1.  Turn off Link Previews
2.  Go into a chat and type a message with a URL in it
3.  See double comment

OBSERVED RESULT

The comment and text will become double posted within the same message.

EXPECTED RESULT

You should not see a doubling of the comment in the same message

SOFTWARE/OS VERSIONS
Operating System: Fedora Linux 40
KDE Plasma Version: 6.0.3
KDE Frameworks Version: 6.1.0
Qt Version: 6.6.2
Kernel Version: 6.8.7-300.fc40.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 2700X Eight-Core Processor
Memory: 31.3 GiB of RAM
Graphics Processor: AMD Radeon RX 590 Series
Manufacturer: Gigabyte Technology Co., Ltd.
Product Name: X470 AORUS GAMING 7 WIFI

NeoChat:
Built from Git master
KDe Frameworks 6.2.0
Wayland
QT 6.6.2
LibQuotient 0.8.2

ADDITIONAL INFORMATION
Comment 1 Timothy Arnold 2024-04-25 17:43:50 UTC
When bisecting, this appeared to be related to https://invent.kde.org/network/neochat/-/commit/de40701cf65e1b8bb28499bfcf20ed00c6bf4fc1
Comment 2 Bug Janitor Service 2024-04-28 10:15:04 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/neochat/-/merge_requests/1720
Comment 3 James Graham 2024-04-28 10:51:47 UTC
Git commit 0cf1d87b12d36d3b53959b10dc9c228a397af3e9 by James Graham.
Committed on 28/04/2024 at 10:51.
Pushed by nvrwhere into branch 'master'.

Fix the master show link preview setting and add back the per room setting

Title

M  +6    -3    src/models/messagecontentmodel.cpp
M  +6    -1    src/models/messagecontentmodel.h

https://invent.kde.org/network/neochat/-/commit/0cf1d87b12d36d3b53959b10dc9c228a397af3e9