Fix the master show link preview setting and add back the per room setting

Title

BUG: 486126